# ai-workshop-rbcn-2026

./: .env.template  .gitignore  README.md  agenda.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
1.3.RF-MCP_Automate_Scenarios/: rf-mcp_automate_scenarios.md
GeneralAiTopics/: README.md
RF-MCP/: README.md
RF-MCP/1.2.RF-MCP_Installation/: rf-mcp_installation.md
RF-MCP/1.3.RF-MCP_Automate_Scenarios/: rf-mcp_automate_scenarios.md
RF-MCP/1.4.RF-MCP_Interactive_Development/: rf-mcp_interactive_development.md
RF-MCP/1.5.RF-MCP_Debug_Bridge/: rf_mcp_debug_bridge.md
RF-MCP/1.5.RF-MCP_Debug_Bridge/tests/: debugbridge_complex_webshop.robot  debugbridge_simple_webshop.robot
RF-MCP/1.6.RF-MCP_Keywords/: rf_mcp_keywords.md
docs/Copilot/: README.md
docs/DocTestAi/: README.md
docs/DocTestAi/tests/: doctest_webshop_download_pdf.robot
docs/GeneralAiTopics/: README.md
docs/GeneralAiTopics/AgentSkills/: agentskills.md
docs/RF-MCP/1.1.RF-MCP_Overview/: rf-mcp_overview.md
docs/RF-MCP/1.2.RF-MCP_Installation/: rf-mcp_installation.md
docs/RF-MCP/1.3.RF-MCP_Automate_Scenarios/: rf-mcp_automate_scenarios.md
docs/RF-MCP/1.4.RF-MCP_Interactive_Development/: rf-mcp_interactive_development.md
docs/RF-MCP/1.5.RF-MCP_Debug_Bridge/: rf_mcp_debug_bridge.md
docs/RobotAiAgent/: README.md
docs/SelfHealing/: README.md
tests/: hello.robot  hello_browser.robot  hello_selenium.robot
tests/SelfHealing/: selfhealing_automationintesting.robot  selfhealing_demoshop_add_to_cart.robot  selfhealing_demoshop_assertion_errors.robot
(+46 files in other folders)
